# how-to-test

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
backend/: main.py
backend/models/: database.py
backend/views/text/: controller.py  router.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: MyHome.vue
tests/e2e/text/: test_text.py
tests/integration/text/: test_text_router.py
tests/unit/text/: test_text_controller.py
